overflow fix

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,6 +27,10 @@ html{
   font-size: 14px!important;
 }
 
+body{
+  overflow: scroll;
+}
+
 .content-wrapper{
   padding: 20px;
 }
